# sz-sdk-proto

./: .gitignore  .project  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  development-requirements.txt  doc.go  g2config.proto  g2configmgr.proto  g2diagnostic.proto  g2engine.proto  g2hasher.proto  g2product.proto  g2ssadm.proto  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  szconfig.proto  szconfigmanager.proto  szconfigmgr.proto  szdiagnostic.proto  szengine.proto
.claude/: CLAUDE.md
.claude/commands/: senzing.md
.github/: dependabot.yml
.github/linters/: .jscpd.json
.github/workflows/: README.md  add-label-customer-submission.yaml  add-label-triage.yaml  add-labels-standardized.yaml  add-to-project-garage-dependabot.yaml  add-to-project-garage.yaml  go-proxy-pull.yaml  make-go-tag.yaml  publish-to-pypi.yaml
docs/: README.md  development.md
example_generated_source_code/cpp/: g2config.grpc.pb.cc  g2config.grpc.pb.h  g2config.pb.cc  g2config.pb.h  g2configmgr.grpc.pb.cc  g2configmgr.grpc.pb.h  g2configmgr.pb.cc  g2configmgr.pb.h  g2diagnostic.grpc.pb.cc  g2diagnostic.grpc.pb.h  g2diagnostic.pb.cc  g2diagnostic.pb.h  g2engine.grpc.pb.cc  g2engine.grpc.pb.h  g2engine.pb.cc  g2engine.pb.h  g2hasher.grpc.pb.cc  g2hasher.grpc.pb.h  g2hasher.pb.cc  g2hasher.pb.h  (+8 more)
go/: README.md  doc.go  go.mod  go.sum
makefiles/: darwin.mk  darwin_arm64.mk  darwin_x86_64.mk  linux.mk  linux_arm64.mk  linux_x86_64.mk  windows.mk  windows_arm64.mk  windows_x86_64.mk
python/: README.md  create_package.py  pyproject.toml
(+1580 files in other folders)
