[metadata]
name = senzing_grpc_protobuf
version = 0.1.0
author = senzing
author_email = support@senzing.com
description = Senzing Python SDK for gRPC Protobuf
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/sz-sdk-proto
project_urls =
    Bug Tracker = https://github.com/senzing-garage/sz-sdk-proto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    senzing_grpc_protobuf = python/src/senzing_grpc_protobuf
packages = find:
python_requires = >=3.9

[options.packages.find]
where = python/src/senzing_grpc_protobuf
